Bug 445084 - Subdirectory Placeholder is forgotten if another placeholder comes after it and is empty.
Summary: Subdirectory Placeholder is forgotten if another placeholder comes after it a...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 21.04.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-06 16:44 UTC by Jack Greiner
Modified: 2024-06-20 06:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Greiner 2021-11-06 16:44:40 UTC
SUMMARY
Using '/%Y-%M/%T_%Y%M%D_%H%m%S' when defining a filename should yield screenshots in a subfolder, but when %T is not applicable (e.g. when taking a Full Screen screenshot) the subdirectory is ignored and the screenshot is placed in the root screenshot folder. 

STEPS TO REPRODUCE
1. Use '/%Y-%M/%T_%Y%M%D_%H%m%S' when defining a filename.
2. Take a Full Screen screenshot.
3. Take an Active Window screenshot.

OBSERVED RESULT
Full Screen screenshot ignores subdirectory.
Active Window screenshot is in the defined subdirectory.

EXPECTED RESULT
Both screenshots should be in the defined subdirectory.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.14.16-301.fc35.x86_64 (64-bit)
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
When taking an Active Window screenshot this behaviour is not observed. This is most likely down to there being available 'Window Title' information.
Comment 1 Bug Janitor Service 2021-11-06 21:44:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/95
Comment 2 Bug Janitor Service 2024-05-24 05:08:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/370
Comment 3 Noah Davis 2024-05-24 05:10:16 UTC
Git commit 18343ecc9d56993312c5bf3e073264c099b4726c by Noah Davis.
Committed on 24/05/2024 at 05:08.
Pushed by ndavis into branch 'master'.

ExportManager: keep dir separators near <title>

M  +36   -11   src/ExportManager.cpp
M  +9    -4    tests/FilenameTest.cpp

https://invent.kde.org/graphics/spectacle/-/commit/18343ecc9d56993312c5bf3e073264c099b4726c
Comment 4 Noah Davis 2024-06-20 06:49:05 UTC
Git commit 9c6f7e4effc8c6b7a48433196f0117110ad98c58 by Noah Davis.
Committed on 20/06/2024 at 06:49.
Pushed by ndavis into branch 'release/24.05'.

ExportManager: keep dir separators near <title>


(cherry picked from commit 18343ecc9d56993312c5bf3e073264c099b4726c)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +36   -11   src/ExportManager.cpp
M  +9    -4    tests/FilenameTest.cpp

https://invent.kde.org/graphics/spectacle/-/commit/9c6f7e4effc8c6b7a48433196f0117110ad98c58