ExportManager: keep dir separators near <title>

BUG: 445084